--- a/src/exercise/04.md
+++ b/src/exercise/04.md
@@ -153,7 +153,9 @@ For this extra credit, add `propTypes` support to your updated component
 (remember to update it to have the subject and greeting).
 
 🦉 Note that prop types add some runtime overhead resulting in sub-optimal
-performance, so they are not run in production.
+performance, so they are not run in production. They are just for development,
+not needed in production. So they are removed by Babel plugins when a production
+version is build.
 
 📜 Read more about prop-types:
 
